# studio

./: .gitignore  IGNORE.md  LICENSE  README.es.md  README.it.md  README.md  STUDIO.md  evals.md  harness.md  mcp.md  pyproject.toml  settings.json  stack.md
.sessions/: unknown.json
agents/: architect.md  code-explorer.md  code-simplifier.md  coder.md  doc-updater.md  performance-optimizer.md  planner.md  refactor-cleaner.md  reviewer.md  security-reviewer.md  tdd-guide.md
contexts/: dev.md  research.md  review.md
docs/: mowgli-paper-en.md  mowgli-paper-it.md
hooks/: hooks.json
mcp/: global.json
rules/common/: clean-architecture.md  clean-code.md  git.md  hooks.md  llm-security.md  patterns.md  performance.md  security.md  testing.md
rules/js/: coding-style.md  patterns.md  react.md  security.md  testing.md
rules/python/: coding-style.md  fastapi.md  patterns.md  security.md  testing.md
rules/sql/: coding-style.md  patterns.md  security.md
scripts/: activate.py  dashboard.py
scripts/hooks/: cost-tracker.py  desktop-notify.py  gateguard.py  pre-compact.py  quality-gate.py  read-tracker.py  session-end.py  session-start.py
scripts/lib/: studio.py
scripts/tests/: test_circuit_breaker.py  test_mowgli.py
skills/api-design/: SKILL.md
skills/backend-patterns/: SKILL.md
skills/coding-standards/: SKILL.md
skills/docker-patterns/: SKILL.md
skills/error-debugging/: SKILL.md
skills/eval-harness/: SKILL.md
skills/frontend-patterns/: SKILL.md
skills/git-workflow/: SKILL.md
skills/graphify/: SKILL.md
skills/multi-agent-patterns/: SKILL.md
(+20 files in other folders)
