[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mowgli-studio"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = ["click>=8.0", "rich>=13.0", "prompt_toolkit>=3.0"]

[project.scripts]
mowgli = "mowgli.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
include = ["mowgli*"]
